--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "components"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "font-awesome": "fontawesome#~4.4.0"
   }
 }
