--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.13.3",
-    "serve-favicon": "^2.3.0",
-    "morgan": "^1.6.1",
-    "cookie-parser": "^1.3.3",
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
-    "method-override": "^2.3.0",
+    "cookie-parser": "^1.3.3",
+    "express": "^4.13.3",
     "glob": "^5.0.3",
+    "jade": "^1.11.0",
+    "method-override": "^2.3.0",
+    "moment": "^2.10.6",
     "mongoose": "^4.1.2",
-    "jade": "^1.11.0"
+    "morgan": "^1.6.1",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
