random data generator

--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "express": "^4.13.3",
     "glob": "^5.0.3",
     "jade": "^1.11.0",
+    "lorem-ipsum": "^1.0.3",
     "method-override": "^2.3.0",
     "moment": "^2.10.6",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "slug": "^0.9.1",
+    "truncate": "^2.0.0"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
