--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
+    "express-messages": "^1.0.0",
+    "express-session": "^1.12.1",
     "glob": "^5.0.3",
     "jade": "^1.11.0",
     "lorem-ipsum": "^1.0.3",
