--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.13.3",
     "express-messages": "^1.0.0",
     "express-session": "^1.12.1",
+    "express-validator": "^2.18.0",
     "glob": "^5.0.3",
     "jade": "^1.11.0",
     "lorem-ipsum": "^1.0.3",
@@ -20,6 +21,7 @@
     "moment": "^2.10.6",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
+    "pinyin": "^2.6.2",
     "serve-favicon": "^2.3.0",
     "slug": "^0.9.1",
     "truncate": "^2.0.0"
