--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.10.6",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
+    "passport": "^0.3.2",
     "pinyin": "^2.6.2",
     "serve-favicon": "^2.3.0",
     "slug": "^0.9.1",
