--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
     "express-messages": "^1.0.0",
